Rajout d'example doc
