# app/Http/Controllers/FilmController.php
@@ -88,14 +88,14 @@ class FilmController extends Controller
      *         required=true,
      *         description="Données du film à mettre à jour",
      *         @OA\JsonContent(
-     *             @OA\Property(property="title", type="string"),
-     *             @OA\Property(property="release_year", type="integer"),
-     *             @OA\Property(property="length", type="integer"),
-     *             @OA\Property(property="description", type="string"),
-     *             @OA\Property(property="rating", type="string"),
-     *             @OA\Property(property="language_id", type="integer"),
-     *             @OA\Property(property="special_features", type="string"),
-     *             @OA\Property(property="image", type="string"),
+     *             @OA\Property(property="title", type="string", example="Monster Inc"),
+     *             @OA\Property(property="release_year", type="integer", example=2001),
+     *             @OA\Property(property="length", type="integer", example=121),
+     *             @OA\Property(property="description", type="string", example="Yayy"),
+     *             @OA\Property(property="rating", type="string", example="G"),
+     *             @OA\Property(property="language_id", type="integer", example=1),
+     *             @OA\Property(property="special_features", type="string", example="languages"),
+     *             @OA\Property(property="image", type="string", example="bla"),
      *         ),
      *     ),
      *     @OA\Response(
